Fix lien number vertical alignment.

--- a/src/features/editor/CatalaEditor.module.css
+++ b/src/features/editor/CatalaEditor.module.css
@@ -14,7 +14,7 @@
     font-family: "Roboto Mono", sans-serif;
     font-weight: normal;
     font-size: 16px;
-    vertical-align: bottom;
+    vertical-align: middle;
     color: #858585;
     display: table-cell;
 }
